--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,7 @@
   </style>
 </head>
 <body>
-  <img id="whale" src="whale300.png"/>
+  <img class="test" id="whale" src="whale300.png"/>
   <div id="waves"></div>
   <div id="sea"></div>
 </body>
