--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Docker Whale 2</title>
+  <title>Docker Whale next</title>
   <style>
     body {
       background-color: #BDEDFF;
